--- a/meet-landing-page/starter-code/index.html
+++ b/meet-landing-page/starter-code/index.html
@@ -58,8 +58,8 @@
 </div>
   
 
-<div class="footer" id="footer">
-    <div class="page-2"> 
+<div class="footer">
+    <div class="page page-2"> 
       <div class="line"></div>
       <div class="circle">02</div>
     </div>
